[package]
name = "wasm-blockchain"
version = "0.0.1"
authors = ["Nebula <nebula@kora.gg>"]
description = "Proof-Of-Concept WebAssembly Blockchain"
license = "MIT/Apache-2.0"
repository = "https://github.com/nebulatgs/wasm-blockchain"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
blake3 = { version = "1.1.0", features = ["rayon"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }


[dependencies.web-sys]
version = "0.3.4"
features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window']
