[package]
name = "vulkan"
version = "0.1.0"
authors = ["RustyBamboo <d@volya.xyz>"]
edition = "2018"

# [[bin]]
# name = "vulkan"
# path = "src/lib.rs"

# [lib]
# name = "vulkan"
# crate-type = ["cdylib"]
# path = "src/lib.rs"


# [features]
# default = ["use-compiled-tools"]
# use-installed-tools = ["spirv-builder/use-installed-tools"]
# use-compiled-tools = ["spirv-builder/use-compiled-tools"]

[dependencies]
wgpu = {version = "0.11.0", features=["spirv", "spirv-web"]}
# futures = "*"
hex = "*"
csv = "*"
bytemuck = "*"



# [build-dependencies]
# spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", rev="44c9fdd8c511ff14ab64281c54910651fba86a0f", default-features = false }
# rev = "4395b841141"